--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -251,5 +251,44 @@ canvas {
     color: #6c757d;
     margin-top: 15px;
   }
+// user
+  .card-custom {
+    margin: 10px;
+    text-align: center;
+    padding: 20px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+  }
+
+  .card-custom .icon {
+    font-size: 2rem;
+  }
+
+  .purple {
+    background-color: #F2873C;
+  }
+
+  .brown {
+    background-color: #8b4513;
+  }
+
+  .silver {
+    background-color: #6a5acd;
+  }
+
+  .gold {
+    background-color: #daa520;
+  }
+
+  .orange {
+    background-color: #f0a500;
+  }
+
+  .Diamond {
+    background-color: #dc3545;
+  }
+
+
 
 
