--- a/src/app/layout/layout/layout.component.scss
+++ b/src/app/layout/layout/layout.component.scss
@@ -1,7 +1,7 @@
 
  .sidebar {
   width: 250px;
-  background-color: #1f2a40;
+  background-color: #164ebc;
   color: #fff;
   height: 100vh;
   position: fixed;
