--- a/src/app/matching-income/matching-income.component.html
+++ b/src/app/matching-income/matching-income.component.html
@@ -42,6 +42,11 @@
             <td>{{items.remark}}</td>
           
           </tr>
+          <tr *ngIf="mdata.length === 0">
+            <td colspan="6" class="text-center text-danger fw-bold">
+              No data is available
+            </td>
+          </tr>
     
     </tbody>
 </table>
