--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -50,6 +50,12 @@
           <td>{{ items.type }}</td>
           <td>{{ items.remark }}</td>
         </tr>
+                <!-- No data found message -->
+                <tr *ngIf="filteredReport.length === 0">
+                  <td colspan="6" class="text-center text-danger fw-bold">
+                    No data is available
+                  </td>
+                </tr>
       </tbody>
     </table>
   </div>
