--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -50,7 +50,7 @@
                   style="border-radius: 16px; font-size: 20px; ">
                   <option selected>Select Coin</option>
                   <option value="USDTBEP2O">USDT BEP2O</option>
-                  <option value="YOHANCOIN">YOHAN COIN</option>
+                  <!-- <option value="YOHANCOIN">YOHAN COIN</option> -->
                 </select>
               </div>
             </div>
