--- a/src/app/direct-team/direct-team.component.html
+++ b/src/app/direct-team/direct-team.component.html
@@ -1,18 +1,21 @@
+<h4 class="fw-bold">MY Direct Team</h4>
 
-  <h4 class="fw-bold">MY Direct Team</h4>
-  <div class="mb-3">
-    <label for="teamSelect" class="form-label ">Select Package</label>
-    <select id="teamSelect" class="form-select" [(ngModel)]="selectedFilter"  (change)="filterTeam()">
-      <option value=""> All</option>
-      <option value="0">Registred Users</option>
-      <option value="1">Subscribed</option>
-      <option value="2">Silver</option>
-        <option value="3">Gold</option>
-          <option value="4">Diamond</option>
-    </select>
-  </div>
-  <table class="table">
-    <thead>
+<div class="mb-3">
+  <label for="teamSelect" class="form-label">Select Package</label>
+  <select id="teamSelect" class="form-select" [(ngModel)]="selectedFilter" (change)="filterTeam()">
+    <option value="">All</option>
+    <option value="0">Registered Users</option>
+    <option value="1">Subscribed</option>
+    <option value="2">Silver</option>
+    <option value="3">Gold</option>
+    <option value="4">Diamond</option>
+  </select>
+</div>
+
+<!-- Make table responsive -->
+<div class="table-responsive">
+  <table class="table table-bordered table-striped align-middle">
+    <thead class="table-light">
       <tr>
         <th>S.No</th>
         <th>Date</th>
@@ -22,6 +25,25 @@
         <th>Status</th>
       </tr>
     </thead>
+    <!-- <tbody>
+      <tr *ngFor="let row of paginatedData; let i = index">
+        <td>{{ (currentPage - 1) * itemsPerPage + i + 1 }}</td>
+        <td>{{ row.cdate }}</td>
+        <td>{{ row.regid }}</td>
+        <td>{{ row.name }}</td>
+        <td>
+          <span *ngIf="row.boardstatus == '0'" class="text-danger">Not Subscribe</span>
+          <span *ngIf="row.boardstatus == '1'" class="text-success">Subscribed</span>
+          <span *ngIf="row.boardstatus == '2'" class="text-primary">Silver Upgrade</span>
+          <span *ngIf="row.boardstatus == '3'" class="text-warning">Gold Upgrade</span>
+          <span *ngIf="row.boardstatus == '4'" class="text-info">Diamond Upgrade</span>
+        </td>
+        <td>
+          <span *ngIf="row.topupstatus == '0'" class="text-danger">Not Active</span>
+          <span *ngIf="row.boardstatus == '1'" class="text-success">Active</span>
+        </td>
+      </tr>
+    </tbody> -->
     <tbody>
       <tr *ngFor="let row of paginatedData; let i = index">
         <td>{{ (currentPage - 1) * itemsPerPage + i + 1 }}</td>
@@ -40,25 +62,35 @@
           <span *ngIf="row.boardstatus == '1'" class="text-success">Active</span>
         </td>
       </tr>
+    
+      <!-- No data found message -->
+      <tr *ngIf="filteredData.length === 0">
+        <td colspan="6" class="text-center text-danger fw-bold">
+          No data is available
+        </td>
+      </tr>
     </tbody>
+    
   </table>
-  
-  <!-- Pagination Controls -->
-  <nav *ngIf="totalPages > 1" class="mt-3">
-    <ul class="pagination justify-content-center">
-      <li class="page-item" [class.disabled]="currentPage === 1">
-        <a class="page-link" (click)="changePage(currentPage - 1)">Previous</a>
-      </li>
-  
-      <li class="page-item"
-          *ngFor="let page of [].constructor(totalPages); let pageIndex = index"
-          [class.active]="currentPage === pageIndex + 1">
-        <a class="page-link" (click)="changePage(pageIndex + 1)">{{ pageIndex + 1 }}</a>
-      </li>
-  
-      <li class="page-item" [class.disabled]="currentPage === totalPages">
-        <a class="page-link" (click)="changePage(currentPage + 1)">Next</a>
-      </li>
-    </ul>
-  </nav>
-  
+</div>
+
+<!-- Pagination Controls -->
+<nav *ngIf="totalPages > 1" class="mt-3">
+  <ul class="pagination justify-content-center">
+    <li class="page-item" [class.disabled]="currentPage === 1">
+      <a class="page-link" (click)="changePage(currentPage - 1)">Previous</a>
+    </li>
+
+    <li class="page-item"
+        *ngFor="let page of [].constructor(totalPages); let pageIndex = index"
+        [class.active]="currentPage === pageIndex + 1">
+      <a class="page-link" (click)="changePage(pageIndex + 1)">{{ pageIndex + 1 }}</a>
+    </li>
+
+    <li class="page-item" [class.disabled]="currentPage === totalPages">
+      <a class="page-link" (click)="changePage(currentPage + 1)">Next</a>
+    </li>
+  </ul>
+</nav>
+
+
