--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -4,18 +4,16 @@
   <i class="fas fa-bars"></i>
 </div>
 </div>
-
 <!-- Sidebar Overlay for Mobile -->
 <div class="sidebar-overlay" [class.show]="isMobile && isCollapsed" (click)="toggleSidebar()"></div>
 
 <!-- Sidebar -->
 <div class="sidebar" [class.collapsed]="isMobile && !isCollapsed">
   <div class="sidebar-content">
-
     <!-- User Info -->
     <div class="card bg-white p-3 text-center">
       <p class="text-center" routerLink="/dashboard" (click)="handleNavigation()">
-        <img src="assets/usd.jpeg" class="img-fluid" style="width: 50px;" alt="">
+        <img src="assets/logo/myusdicon.webp" class="img-fluid" style="width: 60px;" alt="">
       </p> 
       <h4 class="text-primary">
         <i class="fas fa-tachometer-alt me-2"></i> {{ udata?.regid }}
@@ -29,51 +27,55 @@
     <a routerLink="/dashboard" (click)="handleNavigation()"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
     <a routerLink="/profile" (click)="handleNavigation()"><i class="fas fa-user me-2"></i> Profile</a>
 
-    <!-- Team Menu -->
-    <div class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#teamMenu" role="button" aria-expanded="false"
-        aria-controls="teamMenu">
-        <i class="fa-solid fa-people-group me-2"></i> Team <i class="fas fa-caret-down float-end"></i>
-      </a>
-      <div class="collapse ps-3" id="teamMenu">
-        <ul class="nav flex-column">
-          <li class="nav-item"><a class="nav-link" routerLink="/direct-team" (click)="handleNavigation()">Direct Team</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/leftteam" (click)="handleNavigation()">Left Team</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/rightteam" (click)="handleNavigation()">Right Team</a></li>
-          <li class="nav-item"><a class="nav-link" (click)="mytree(udata?.regid)" (click)="handleNavigation()">Tree View</a></li>
-        </ul>
-      </div>
-    </div>
+<!-- Team Menu -->
+<div class="nav-item">
+  <a class="nav-link" href="javascript:void(0)"
+     (click)="toggleSubmenu('teamMenu')">
+    <i class="fa-solid fa-people-group me-2"></i> Team
+    <i class="fas fa-caret-down float-end"></i>
+  </a>
+  <div class="collapse ps-3" [class.show]="openMenu === 'teamMenu'" id="teamMenu">
+    <ul class="nav flex-column">
+      <li class="nav-item"><a class="nav-link" routerLink="/direct-team" (click)="handleNavigation()">Direct Team</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/leftteam" (click)="handleNavigation()">Left Team</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/rightteam" (click)="handleNavigation()">Right Team</a></li>
+      <li class="nav-item"><a class="nav-link" (click)="mytree(udata?.regid); handleNavigation()">Tree View</a></li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Incomes Menu -->
-    <div class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#incomeMenu" role="button" aria-expanded="false"
-        aria-controls="incomeMenu">
-        <i class="fas fa-money-bill me-2"></i> Incomes <i class="fas fa-caret-down float-end"></i>
-      </a>
-      <div class="collapse ps-3" id="incomeMenu">
-        <ul class="nav flex-column">
-          <li class="nav-item"><a class="nav-link" routerLink="/sponsorincome" (click)="handleNavigation()">Sponsor Income</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/matchingincome" (click)="handleNavigation()">Matching Income</a></li>
-        </ul>
-      </div>
-    </div>
+<!-- Incomes Menu -->
+<div class="nav-item">
+  <a class="nav-link" href="javascript:void(0)"
+     (click)="toggleSubmenu('incomeMenu')">
+    <i class="fas fa-money-bill me-2"></i> Incomes
+    <i class="fas fa-caret-down float-end"></i>
+  </a>
+  <div class="collapse ps-3" [class.show]="openMenu === 'incomeMenu'" id="incomeMenu">
+    <ul class="nav flex-column">
+      <li class="nav-item"><a class="nav-link" routerLink="/sponsorincome" (click)="handleNavigation()">Sponsor Income</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/matchingincome" (click)="handleNavigation()">Matching Income</a></li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Funds Menu -->
-    <div class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#fundsMenu" role="button" aria-expanded="false"
-        aria-controls="fundsMenu">
-        <i class="fas fa-wallet me-2"></i> Funds <i class="fas fa-caret-down float-end"></i>
-      </a>
-      <div class="collapse ps-3" id="fundsMenu">
-        <ul class="nav flex-column">
-          <li class="nav-item"><a class="nav-link" routerLink="/deposit" (click)="handleNavigation()">Deposit Funds</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/withdraw" (click)="handleNavigation()">Withdraw Funds</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/transfer" (click)="handleNavigation()">Transfer Funds</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/recieved" (click)="handleNavigation()">Received Funds</a></li>
-        </ul>
-      </div>
-    </div>
+<!-- Funds Menu -->
+<div class="nav-item">
+  <a class="nav-link" href="javascript:void(0)"
+     (click)="toggleSubmenu('fundsMenu')">
+    <i class="fas fa-wallet me-2"></i> Funds
+    <i class="fas fa-caret-down float-end"></i>
+  </a>
+  <div class="collapse ps-3" [class.show]="openMenu === 'fundsMenu'" id="fundsMenu">
+    <ul class="nav flex-column">
+      <li class="nav-item"><a class="nav-link" routerLink="/deposit" (click)="handleNavigation()">Deposit Funds</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/withdraw" (click)="handleNavigation()">Withdraw Funds</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/transfer" (click)="handleNavigation()">Transfer Funds</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/recieved" (click)="handleNavigation()">Received Funds</a></li>
+    </ul>
+  </div>
+</div>
+
 
     <a routerLink="/report" (click)="handleNavigation()"><i class="fas fa-chart-bar me-2"></i> Report</a>
     <a (click)="logout()"><i class="fas fa-sign-out-alt me-2"></i> Logout</a>
@@ -90,7 +92,7 @@
       </div>
       <div class="col-4">
           <div class="text-center p-3 ">
-                <img src="assets/usd.jpeg" class="img img-fluid" width="40px" alt="">
+                <img src="assets/logo/myusdicon.webp" class="img img-fluid" width="40px" alt="">
             </div>
       </div>
       <div class="col-4 mt-4 ">
@@ -124,7 +126,6 @@
         </nav>
       </div>
 
-    
     </div>
   </div>
 
