--- a/src/app/received/received.component.html
+++ b/src/app/received/received.component.html
@@ -27,7 +27,12 @@
               <td>${{ item.amount }}</td>
               <td>{{ item.waltype }}</td>
             </tr>
-            
+                <!-- No data found message -->
+                <tr *ngIf="rPaginatedData.length === 0">
+                  <td colspan="6" class="text-center text-danger fw-bold">
+                    No data is available
+                  </td>
+                </tr>
   
           </tbody>
         </table>
