--- a/src/app/tree-view/tree-view.component.html
+++ b/src/app/tree-view/tree-view.component.html
@@ -13,13 +13,36 @@
 
   <!-- Team Info -->
   <div class="row text-center g-3">
-    <div class="col-6">
+    <!-- <div class="col-6">
       <h6 class="mb-1 text-success">Left Team</h6>
       <p-tag severity="success" [value]="data2?.mleft"></p-tag>
     </div>
     <div class="col-6">
       <h6 class="mb-1 text-danger">Right Team</h6>
       <p-tag severity="danger" [value]="data2?.mright"></p-tag>
+    </div> -->
+    <div class="col-sm-2">
+      <img src="assets/rfree" alt="" srcset="" height="50px">
+      <h6>Free User</h6>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/rgreen" alt="" srcset="" height="50px">
+      <h6>Subscribed</h6>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/rdiamond" alt="" srcset="" height="50px">
+      <h6>Silver</h6>
+    </div> <div class="col-sm-2">
+      <img src="assets/rgold" alt="" srcset="" height="50px">
+      <h6>Gold</h6>
+    </div> 
+    <div class="col-sm-2">
+      <img src="assets/dimaod.jpeg" alt="" srcset="" height="50px">
+      <h6>Diamond</h6>
+    </div>
+    <div class="col-sm-2">
+      <img src="assets/falur.jpeg" alt="" srcset="" height="50px">
+      <h6>Defalut</h6>
     </div>
   </div>
 
@@ -183,3 +206,5 @@
  
    
  </div>
+
+
