--- a/src/app/tree-view/tree-view.component.html
+++ b/src/app/tree-view/tree-view.component.html
@@ -12,8 +12,9 @@
   </div>
 
   <!-- Team Info -->
-  <div class="row text-center g-3">
-    <!-- <div class="col-6">
+
+<div class="row text-center g-3">
+      <!-- <div class="col-6">
       <h6 class="mb-1 text-success">Left Team</h6>
       <p-tag severity="success" [value]="data2?.mleft"></p-tag>
     </div>
@@ -21,30 +22,32 @@
       <h6 class="mb-1 text-danger">Right Team</h6>
       <p-tag severity="danger" [value]="data2?.mright"></p-tag>
     </div> -->
-    <div class="col-sm-2">
-      <img src="assets/rfree" alt="" srcset="" height="50px">
-      <h6>Free User</h6>
-    </div>
-    <div class="col-sm-2">
-      <img src="assets/rgreen" alt="" srcset="" height="50px">
-      <h6>Subscribed</h6>
-    </div>
-    <div class="col-sm-2">
-      <img src="assets/rdiamond" alt="" srcset="" height="50px">
-      <h6>Silver</h6>
-    </div> <div class="col-sm-2">
-      <img src="assets/rgold" alt="" srcset="" height="50px">
-      <h6>Gold</h6>
-    </div> 
-    <div class="col-sm-2">
-      <img src="assets/dimaod.jpeg" alt="" srcset="" height="50px">
-      <h6>Diamond</h6>
-    </div>
-    <div class="col-sm-2">
-      <img src="assets/falur.jpeg" alt="" srcset="" height="50px">
-      <h6>Defalut</h6>
-    </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/rfree" alt="Free User" height="50">
+    <h6 class="mt-2">Free User</h6>
   </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/rgreen" alt="Subscribed" height="50">
+    <h6 class="mt-2">Subscribed</h6>
+  </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/rdiamond" alt="Silver" height="50">
+    <h6 class="mt-2">Silver</h6>
+  </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/rgold" alt="Gold" height="50">
+    <h6 class="mt-2">Gold</h6>
+  </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/dimaod.jpeg" alt="Diamond" height="50">
+    <h6 class="mt-2">Diamond</h6>
+  </div>
+  <div class="col-6 col-sm-4 col-md-2">
+    <img src="assets/falur.jpeg" alt="Default" height="50">
+    <h6 class="mt-2">Default</h6>
+  </div>
+</div>
+
 
   <!-- Search Section -->
   <div class="mt-4">
