--- a/src/app/auth-refer-share/auth-refer-share.component.html
+++ b/src/app/auth-refer-share/auth-refer-share.component.html
@@ -101,6 +101,7 @@
             </div>
 
             <button type="submit" class="btn btn-dark w-100 mt-3 rounded-pill">Sign Up</button>
+            <!-- ajdds -->
 
             <div class="text-center mt-3">
               Already have an account? <a routerLink="/login" class="text-primary">Log In</a>
