--- a/src/app/auth-refer-share/auth-refer-share.component.scss
+++ b/src/app/auth-refer-share/auth-refer-share.component.scss
@@ -1,48 +1,3 @@
-
-// .login-container {
-//     background: rgba(255, 255, 255, 0.95);
-//     padding: 2rem;
-//     border-radius: 2rem;
-//     text-align: center;
-//     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-//     width: 100%;
-//   }
-
-//   .login-container h1 {
-//     color: #333;
-//   }
-
-//   .login-container p {
-//     color: #666;
-//   }
-
-//   .form-control {
-//     border-radius: 20px;
-//     padding: 10px 15px;
-//     margin-bottom: 1rem;
-//   }
-
-//   .btn-primary {
-//     background-color: #007bff;
-//     border: none;
-//     border-radius: 20px;
-//     padding: 10px 30px;
-//     width: 100%;
-//   }
-
-//   .btn-primary:hover {
-//     background-color: #0056b3;
-//   }
-
-//   .text-muted a {
-//     color: #666;
-//     text-decoration: none;
-//   }
-
-//   .text-muted a:hover {
-//     text-decoration: underline;
-//   }
-
 .register-container {
   background: #fff;
 }
@@ -57,11 +12,20 @@
   top: 50%;
   transform: translateY(-50%);
   color: #555;
-  font-size: 0.9rem;
+  font-size:1rem;
   z-index: 2;
 }
 
-.form-control,
+.form-control {
+  padding-left: 2.2rem; /* for icon */
+    border-radius: 20px;
+}
+
+/* Extra space when country code is shown */
+.input-wrapper.has-code .form-control {
+  padding-left: 4.5rem; /* adjust based on code length */
+}
+
 .form-select {
   padding-left: 2.2rem;
   border-radius: 20px;
