--- a/src/app/layout/layout/layout.component.scss
+++ b/src/app/layout/layout/layout.component.scss
@@ -91,4 +91,14 @@
   .main-content {
     margin-left: 0;
   }
+
+  .badge {
+  font-size: 1rem;
+  border-radius: 20px;
+}
+.nav-link {
+  padding: 5 !important;
+}
+
+
 }
