--- a/src/app/matching-income/matching-income.component.html
+++ b/src/app/matching-income/matching-income.component.html
@@ -37,7 +37,7 @@
         <tr *ngFor="let items of mdata let i='index' ">
             <td>{{i+1}}</td>
             <td>{{items.cdate}}</td>
-            <td>${{items.amount}}</td>
+            <td class="text-success">{{items.amount | currency:'USD':true:'1.0-1'}}</td>
             <td>{{items.type}}</td>
             <td>{{items.remark}}</td>
           
